--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+.app-button {
+  border: 0;
+  border-radius: 0;
+  height: 3rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.p-color {
+  background-color: red;
+  color: white;
+}
+
+.s-color {
+  background-color: #C0C0C0;
+  color: black;
+}
+
+.full-width {
+  width: 100%;
+}
