--- a/src/layout/components/AppNavBar.css
+++ b/src/layout/components/AppNavBar.css
@@ -14,6 +14,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 .avatar {
@@ -88,4 +89,5 @@
 
 .signout {
     margin: 2px;
+    cursor: pointer;
 }
