--- a/src/views/accountView/components/EditAccountModal.css
+++ b/src/views/accountView/components/EditAccountModal.css
@@ -1,17 +1,17 @@
-.row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.row input {
+.cart-content input {
     border-radius: 0;
     border: 0;
     box-shadow: inset 0 0 5px gray;
     background-color: #F3F2F2;
     box-sizing: border-box;
-    margin-bottom: 1rem;
-    margin: 0;
+    margin: 0.5rem 0 1rem 0.5rem;
+    /* margin: 0; */
     font-size: 1rem;
     height: 2rem;
+}
+
+.cart-content label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
