--- a/src/views/authView/pages/LoginPage.css
+++ b/src/views/authView/pages/LoginPage.css
@@ -49,6 +49,7 @@
     font-style: italic;
     text-decoration: underline;
     display: block;
+    cursor: pointer;
 }
 
 .form {
@@ -57,6 +58,24 @@
     justify-content: stretch;
 }
 
+.form label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.form input {
+    height: 2rem;
+    font-size: 1rem;
+    margin: 0.5rem 0 0.5rem 0.5rem;
+}
+
 .clickable {
     cursor: pointer;
+}
+
+.error {
+    margin: 0.5rem 0;
+    text-align: center;
+    color: red;
 }
