--- a/src/views/catalogView/pages/ProductViewer.css
+++ b/src/views/catalogView/pages/ProductViewer.css
@@ -1,6 +1,13 @@
 .viewer-image {
   width: 100%;
   object-fit: contain;
-  border-radius: 5rem;
+  border-radius: 1rem;
   box-shadow: 0 0 10px 1px #696969;
+}
+
+.viewer-image-container {
+  padding: 2rem 3rem 3rem 3rem;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
 }
