--- a/src/shared/components/OrderModal.css
+++ b/src/shared/components/OrderModal.css
@@ -112,3 +112,17 @@
     width: 2rem;
     object-fit: contain;
 }
+
+.order-account-summary {
+    display: flex;
+    flex-direction: row;
+    background-color: #c0c0c0;
+    border-radius: 2rem;
+    padding: 0.5rem 2rem;
+    box-sizing: border-box;
+    align-items: center;
+}
+
+.order-account-summary div {
+    flex-grow: 1;
+}
