--- a/src/views/accountView/pages/CheckoutPage.css
+++ b/src/views/accountView/pages/CheckoutPage.css
@@ -28,3 +28,32 @@
     display: flex;
     flex-direction: column;
 }
+
+.checkout-stub {
+  box-shadow: 0 1px 5px 1px #c0c0c0;
+  border-radius: 2rem;
+  cursor: pointer;
+  height: 6rem;
+}
+
+.checkout-table {
+  width: 100%;
+  border-spacing: 0 1rem;
+  text-align: center;
+}
+
+.checkout-table-header td {
+  background-color: red;
+  color: white;
+  padding: 0.5rem !important;
+  font-weight: bold;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+}
+
+.order-item-pic {
+  height: 100%;
+  width: 5rem;
+  object-fit: contain;
+  margin-right: 1rem;
+}
