--- a/src/shared/components/OrderModal.css
+++ b/src/shared/components/OrderModal.css
@@ -76,9 +76,11 @@
     box-sizing: border-box;
     margin-bottom: 1rem;
     flex-grow: 1;
-    margin: 0 0 0 0.5rem;
-    height: 2rem;
+    margin: 0rem;
     font-size: 1rem;
+    height: 5rem !important;
+    width: 100%;
+    resize: none;
 }
 
 .tally-area {
@@ -130,4 +132,23 @@
 
 .order-account-summary div {
     flex-grow: 1;
+}
+
+.convo-item {
+    background-color: #c0c0c0;
+    border-radius: 0.5rem;
+    padding: 0rem 0.5rem;
+    display: flex;
+    flex-direction: column;
+    margin-top: 0.5rem;
+    word-wrap: break-word;
+    width: 80%;
+}
+
+.convo-left {
+    justify-self: flex-end;
+}
+
+.convo-right {
+    align-self: flex-end;
 }
