--- a/src/layout/components/AppNavBar.css
+++ b/src/layout/components/AppNavBar.css
@@ -4,6 +4,9 @@
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
+  padding-left: 1rem;
+  box-sizing: border-box;
+  flex-wrap: wrap;
 }
 
 .avatar-background {
@@ -27,7 +30,7 @@
 .logo {
     margin-top: 50px;
     padding: 0;
-    width: 30rem;
+    width: 26rem;
     object-fit: contain;
 }
 
@@ -48,6 +51,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    cursor: pointer;
 }
 
 .brand-name {
@@ -69,7 +73,7 @@
 
 .search {
     height: 2rem;
-    width: 50%;
+    width: 45%;
     display: flex;
     flex-direction: row;
 }
@@ -92,9 +96,38 @@
     color: white;
     border: 0;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-button:hover {
+    background-color: rgb(207, 0, 0);
 }
 
 .signout {
     margin: 2px;
     cursor: pointer;
+    text-align: center;
+    background-color: red;
+    margin: 0;
+    color: white;
+    border-radius: 0.3rem 0 0 0.3rem;
+    font-size: 1.5rem;
+    padding: 0 0.5rem;
+}
+
+.signout:hover {
+    background-color: rgb(207, 0, 0);
+}
+
+.authenticate-button {
+    border: 0;
+    border-radius: 0;
+    border-radius: 0.3rem 0 0 0.3rem;
+    font-size: 1rem;
+    height: 2.5rem;
+    cursor: pointer;
+    color: white;
+    background-color: red;
 }
