--- a/src/layout/pages/Layout.css
+++ b/src/layout/pages/Layout.css
@@ -5,17 +5,19 @@
 }
 
 .content-container {
-    height: 100vh;
-    width: 85%;
-    margin-left: 15%;
-    box-sizing: border-box;
-    position: absolute;
-    top: 0;
+    height: 100%;
+    width: 100%;
     background-color: white;
     border-radius: 5rem 0rem 0rem 5rem;
     overflow: hidden;
-    padding: 0rem 3rem 1rem 3rem;
     box-shadow: 0 0 10px 1px #696969;
     overflow-y: auto;
 }
 
+.content-limit {
+    height: 100vh;
+    width: calc(100% - 240px);
+    margin-left: 240px;
+    position: absolute;
+    top: 0;
+}
