--- a/src/layout/components/AppFooter.css
+++ b/src/layout/components/AppFooter.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 23.5% 6% 23.5% 23.5% 23.5%;
     background-color: rgb(56, 56, 56);
+    margin-top: 1rem;
 }
 
 
