Fixed styling bugs and wire product description to ProductViewer

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,10 @@
   cursor: pointer;
 }
 
+.app-button:hover {
+  transform: scale(102%);
+}
+
 .p-color {
   background-color: red;
   color: white;
