--- a/src/layout/components/AppNavBar.css
+++ b/src/layout/components/AppNavBar.css
@@ -29,6 +29,9 @@
 }
 
 .logo {
+    display: flex;
+    position: relative;
+    left: 25px;
     margin-top: 50px;
     padding: 0;
     width: 26rem;
@@ -93,7 +96,7 @@
     height: 100%;
     width: 2.5rem;
     border-radius: 0;
-    background-color: red;
+    background-color: rgb(251,6,62);
     color: white;
     border: 0;
     cursor: pointer;
@@ -103,14 +106,14 @@
 }
 
 .search-button:hover {
-    background-color: rgb(207, 0, 0);
+    background-color: rgb(204, 31, 71);
 }
 
 .signout {
     margin: 2px;
     cursor: pointer;
     text-align: center;
-    background-color: red;
+    background-color: rgb(251,6,62);
     margin: 0;
     color: white;
     border-radius: 0.3rem 0 0 0.3rem;
@@ -119,7 +122,7 @@
 }
 
 .signout:hover {
-    background-color: rgb(207, 0, 0);
+    background-color: rgb(204, 31, 71);
 }
 
 .authenticate-button {
@@ -130,5 +133,5 @@
     height: 2rem;
     cursor: pointer;
     color: white;
-    background-color: red;
+    background-color: rgb(251,6,62);
 }
