--- a/src/layout/components/CartModal.css
+++ b/src/layout/components/CartModal.css
@@ -21,7 +21,7 @@
 
 .modal-brand-name {
     font-weight: bold;
-    color: red;
+    color: rgb(251,6,62);
     margin: 0;
     padding: 0;
     text-align: center;
@@ -37,7 +37,7 @@
 }
 
 .header-title {
-    background-color: red;
+    background-color: rgb(251,6,62);
     color: white;
     margin: 0 0 0 0.5rem;
     padding: 0.5rem;
@@ -64,5 +64,5 @@
     font-size: 1.2rem;
     cursor: pointer;
     color: white;
-    background-color: red;
+    background-color: rgb(251,6,62);
 }
