--- a/src/shared/components/OrderModal.css
+++ b/src/shared/components/OrderModal.css
@@ -6,6 +6,11 @@
     width: 60vw;
 }
 
+.cartlogo{
+    display: flex;
+    height: 60px;
+
+}
 .modal-header {
     display: flex;
     flex-direction: row;
@@ -21,7 +26,7 @@
 
 .modal-brand-name {
     font-weight: bold;
-    color: red;
+    color: rgb(251,6,62);
     margin: 0;
     padding: 0;
     text-align: center;
@@ -37,7 +42,7 @@
 }
 
 .header-title {
-    background-color: red;
+    background-color: rgb(251,6,62);
     color: white;
     margin: 0 0 0 0.5rem;
     padding: 0.5rem;
@@ -64,7 +69,7 @@
     font-size: 1.2rem;
     cursor: pointer;
     color: white;
-    background-color: red;
+    background-color: rgb(251,6,62);
 }
 
 .chat-field {
@@ -121,6 +126,8 @@
 }
 
 .order-account-summary {
+    position: relative;
+    top: 5px;
     display: flex;
     flex-direction: row;
     background-color: #c0c0c0;
