--- a/src/views/homeView/components/CarouselItem.css
+++ b/src/views/homeView/components/CarouselItem.css
@@ -40,7 +40,7 @@
   height: 2rem;
   font-size: 1rem;
   cursor: pointer;
-  background-color: red;
+  background-color: rgb(251,6,62);
   color: white;
   border-radius: 1rem;
   font-style: italic;
@@ -48,5 +48,5 @@
 }
 
 .carousel-item-info button:hover {
-    background-color: rgb(200, 0, 0);
+    background-color: rgb(177, 19, 19);
 } 
