--- a/src/views/homeView/pages/HomePage.css
+++ b/src/views/homeView/pages/HomePage.css
@@ -28,12 +28,12 @@
 }
 
 .right-arrow{
-    opacity: 0.5;
+    opacity: 0.4;
     position: absolute;
     top: 40%;
     right: 0.5px;
     font-size: 2rem;
-    color: rgb(255, 255, 255);
+    color: rgb(128, 126, 126);
     z-index: 10;
     cursor: pointer;
     user-select: none;
@@ -41,11 +41,11 @@
 
 .left-arrow{
     position: absolute;
-    opacity: 0.5;
+    opacity: 0.4;
     top: 40%;
     left: 0.5px;
     font-size: 2rem;
-    color: rgb(255, 255, 255);
+    color: rgb(128, 126, 126);
     z-index: 10;
     cursor: pointer;
     user-select: none;
@@ -85,4 +85,14 @@
 
 .FeatureCard{
     background-color: white;
+}
+
+.carousel{
+    display: flex;
+    position: relative;
+    left: 40px;
+}
+
+.header-text{
+    padding-left: 20px;
 }
