--- a/src/views/ordersView/components/OrderCard.css
+++ b/src/views/ordersView/components/OrderCard.css
@@ -1,4 +1,8 @@
 .order-card {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    left: 50px;
     border-radius: 2rem;
     box-shadow: 0 0 10px 1px #696969;
     overflow: hidden;
@@ -33,7 +37,7 @@
     height: 1.2rem;
     width: 1.2rem;
     border-radius: 50%;
-    background-color: red;
+    background-color: rgb(251,6,62);
     margin-right: 0.6rem;
 }
 
