--- a/src/layout/components/AppNavBar.css
+++ b/src/layout/components/AppNavBar.css
@@ -31,7 +31,7 @@
 .logo {
     display: flex;
     position: relative;
-    left: 25px;
+    padding-left: 1.5rem !important;
     margin-top: 50px;
     padding: 0;
     width: 26rem;
