--- a/src/views/catalogView/pages/CatalogViewer.css
+++ b/src/views/catalogView/pages/CatalogViewer.css
@@ -1,10 +1,12 @@
 .category-header {
-    position: relative;
-    width: 100%;
-    background-color: rgb(251,6,62);
-    font-size: 8rem;
-    display: flex;
-    align-items: center;
-    color: white;
-    margin: 0;
-  }
+  height: 10rem;
+  width: 100%;
+  background-color: rgb(251, 6, 62);
+  font-size: 6rem;
+  display: flex;
+  align-items: flex-end;
+  color: white;
+  margin: 0;
+  padding-left: 1rem;
+  box-sizing: border-box;
+}
