--- a/src/views/catalogView/pages/ProductViewer.css
+++ b/src/views/catalogView/pages/ProductViewer.css
@@ -18,7 +18,7 @@
 }
 
 .price-bar {
-  background-color: red;
+  background-color: rgb(251,6,62);
   color: white;
   display: flex;
   align-items: center;
@@ -52,7 +52,7 @@
 }
 
 .product-actions button:last-child {
-  background-color: red;
+  background-color: rgb(251,6,62);
 }
 
 .currency {
@@ -62,6 +62,18 @@
   text-align: center;
   font-size: 1.7rem;
   background-color: white;
-  color: red;
+  color: rgb(251,6,62);
   margin-right: 1rem !important;
+}
+
+.rating-bar {
+  display: flex;
+  align-items: center;
+}
+
+.rating-bar h3 {
+  color: white;
+  border-radius: 0.5rem;
+  margin-left: 0.5rem;
+  padding: 0.3rem;
 }
