--- a/src/views/inventoryView/pages/InventoryPage.css
+++ b/src/views/inventoryView/pages/InventoryPage.css
@@ -2,11 +2,13 @@
   height: 10rem;
   width: 100%;
   background-color: #696969;
-  font-size: 5rem;
+  font-size: 6rem;
   display: flex;
   align-items: flex-end;
   color: white;
   margin: 0;
+  padding-left: 1rem;
+  box-sizing: border-box;
 }
 
 .inventory-table {
