--- a/src/views/accountView/components/OrderStub.css
+++ b/src/views/accountView/components/OrderStub.css
@@ -2,6 +2,11 @@
   box-shadow: 0 1px 5px 1px #c0c0c0;
   border-radius: 2rem;
   cursor: pointer;
+  transition: transform 0.1s;
+}
+
+.order-stub:hover {
+  transform: scale(101%);
 }
 
 .stub-pic {
