--- a/src/views/homeView/pages/HomePage.css
+++ b/src/views/homeView/pages/HomePage.css
@@ -10,6 +10,10 @@
     cursor: pointer;
 }
 
+.home-link:hover {
+    color: rgb(251,6,62);
+}
+
 .Slider{
     position: relative;
     height: 25vh;
@@ -74,6 +78,7 @@
     opacity: 0;
     transition-duration: 1s ease;
     animation: 2s slider infinite;
+    width: 110%;
 }
 
 .slide.active{
