--- a/src/views/catalogView/components/ItemCard.css
+++ b/src/views/catalogView/components/ItemCard.css
@@ -50,7 +50,7 @@
 }
 
 .red {
-    background-color: red;
+    background-color: rgb(251, 6, 62);
 }
 
 .orange {
@@ -58,5 +58,9 @@
 }
 
 .brown {
-    background-color: burlywood;
+    background-color: coral;
+}
+
+.blue {
+    background-color: darkgoldenrod;
 }
